# odl-project

./: .gitignore  main.ipynb  pyproject.toml
churn_tuning/ann_optimization/: oracle.json
churn_tuning/ann_optimization/trial_0/: trial.json
churn_tuning/ann_optimization/trial_1/: trial.json
churn_tuning/ann_optimization/trial_2/: build_config.json  checkpoint.weights.h5  trial.json
churn_tuning/ann_optimization/trial_3/: checkpoint.weights.h5  trial.json
churn_tuning/ann_optimization/trial_4/: checkpoint.weights.h5  trial.json
